--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "url": "git://github.com/LeaVerou/prism.git"
   },
   "bugs": {
-    "url": "https://github.com/Baggz/Amanda/issues",
-    "email": "hello@frantisekhaba.com"
+    "url": "https://github.com/LeaVerou/prism/issues"
   }
 }
